# QML-Lecture

./: .gitignore  .gitmodules  README.md
hello-world/: Cell.qml  Main.qml
neumorphicpanel/: CMakeLists.txt  Main.qml  SettingPanel.qml  Settings.qml  SettingsComponentButton.qml  SettingsComponentSlider.qml  SettingsView.qml  main.cpp
neumorphicpanel/qml/: SettingsComponentButton.qml  SettingsComponentSlider.qml  SettingsView.qml  main.qml
neumorphicpanel/qml/CloudyRectMaterial/: CloudyRectMaterial.qml
simple-dashboard/: Main.qml
